--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
     - name: "Check commit messages match angular style"
       run: |
         ! git log origin/master..HEAD --oneline --pretty=format:%s | \
-          grep -Ev '^(build|chore|ci|docs|feat|fix|perf|style|refactor|test):|^Merge '
+          grep -Ev '^(build|chore|ci|docs|feat|fix|perf|style|refactor|test|chore\(deps\)):|^Merge '
 
   lint:
     name: Lint Checks
